@@ -206,7 +206,7 @@ public:
         int Can_Hear(Submarine *target);
         int Torpedo_AI(Submarine *all_subs);
         // figure out what to do with surface ships
-        Submarine *Ship_AI(Submarine *all_ships, Submarine *all_torpedoes);  
+        // Submarine *Ship_AI(Submarine *all_ships, Submarine *all_torpedoes);  
         // like ship AI in 3D
         Submarine *Sub_AI(Submarine *all_ships, Submarine *all_torpedoes);   
         int Check_Status();         // see if our torpedo is ok
